--- a/css/category.css
+++ b/css/category.css
@@ -10,6 +10,7 @@
   font-size: 22px;
   font-weight: bold;
   width: max-content;
+  max-width: calc(100% - 100px);
 }
 
 .prevBtn {
